version/0.28/_sources/api/solver/_autosummary/settings/named_expressions.rst.txt
:orphan:

.. _named_expressions:

named_expressions
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.named_expressions
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

:ref:`compute <compute_1>`                                        'compute' command.

========================================   =========================================

.. rubric:: Named object type

:ref:`named_expressions_child <named_expressions_child>`


.. rubric:: Included in:

================================   ==========================================

Parent                                                                Summary

================================   ==========================================
:ref:`setup <setup>`                                           'setup' child.

:ref:`observables <observables>`       Enter the postprocessing options menu.

================================   ==========================================

